k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-route
  namespace: portfolio
spec:
  parentRefs:
    - name: portfolio-gateway
  hostnames:
    - www.kiendev.site
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio-service
          port: 80
